--- a/README
+++ b/README
@@ -12,5 +12,8 @@ pdf/
   Portable File Format documents
 
 SC216EL16-R1200LPB.txt
+      Supermicro SC216E16-R1200LPB, DP / UP, 24x 2.5" hot-swap.
+      SAS/SATA, 7x LP, 1200W Redundant (Gold Level)
+      http://www.supermicro.com/products/chassis/2U/?chs=216
 
 TODO
