--- a/pdf/README
+++ b/pdf/README
@@ -9,3 +9,26 @@ Invoice-114935B.pdf
   Receipt for paypal UPS 2nd day air
   invoice for $305.00
   Paid March 2, 2018.
+
+SC216.pdf
+  SC216 Chassis Series
+  Supermicro
+  SC216BAC-R920LPB
+  SC216BE1C-R920LPB    SC216BE1C-R920WB
+  SC216BE2C-R920LPB    SC216BE2C-R920WB
+  SC216BE16-R1K28LPB   SC216BE16-R1K28WB
+  SC216E16-R1200LPB    SC216E16-R1200UB
+  SC216E16-R1010LPB    SC216BE16-R920WB
+  SC216BE16-R920LPB    SC216BE16-R920UB
+  SC216BE-R1K28LPB     SC216BE-R1K28WB
+  SC216E26-R1200LPB    SC216E26-R1200UB
+  SC216BE26-R920LPB    SC216BE26-R920WB
+  SC216BE26-R920UB     SC216BA-R1K28WB
+  SC216BA-R1K28LPB     SC216BA-R920WB
+  SC216BA-R920LPB      SC216BA-R920UB
+  SC216A-R900LPB       SC216A-R900UB
+  SC216E1-R900LPB*     SC216E1-R900UB*
+  SC216E2-R900LPB*     SC216E2-R900UB
+  User's Manual
+  1.0e
+  http://www.supermicro.com/manuals/chassis/2U/SC216.pdf
